# DivorceEngine

./: .gitignore  CMakeLists.txt  Correct.rdc  Wrong.rdc
Engine/: CMakeLists.txt  Camera.cpp  Camera.h  FrameBuffer.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Shader.h  Singleton.h
Engine/components/: Component.cpp  Component.h
Engine/components/camera/: Camera.cpp  Camera.h
Engine/components/model/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Vertex.cpp  Vertex.h  Vertex.hpp
Engine/components/renderer/: Renderer.cpp  Renderer.h
Engine/core/: CoreEngine.cpp  CoreEngine.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  RenderingEngine.cpp  RenderingEngine.h  Window.cpp  Window.h
Engine/scenegraph/: Node.cpp  Node.h  Transform.cpp  Transform.h
Engine/shader/: BasicShader.cpp  BasicShader.h  Shader.cpp  Shader.h
Engine/texture/: Texture.cpp  Texture.h
Engine/utils/: ModelUtils.cpp  ModelUtils.h
cmake/: LinkASSIMP.cmake  LinkImGui.cmake  LinkTinyObjLoader.cmake
resources/: Lightbulb.blend  TestScene.blend
resources/House/: house.fbx
resources/Monkey/: monkey.fbx
resources/shaders/: basic.frag  basic.frag.bak  basic.vert  basic.vert.bak
shaders/: meshShader.frag  solidColorObject.vert
source/: DataTypes.h  FrameBuffer.h  Mesh.cpp  Mesh.h  Scene.h  Shader.cpp  TestGame.cpp  TestGame.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  main.cpp  main2.cpp  utils.h
source/Scene1/: Scene1.cpp  Scene1.h
source/Scene2/: Scene2.cpp  Scene2.h
